--- a/index.html
+++ b/index.html
@@ -8,24 +8,7 @@
     body { font-family: 'Pretendard', sans-serif; background-color: #f9fbfd; margin: 0; padding: 20px; font-size: 18px; color: #333; }
     .container { max-width: 720px; margin: auto; }
 
-    /* 배너 크게 및 비율 맞춤 */
-    .banner {
-      background: #fff;
-      z-index: 20;
-      padding-bottom: 10px;
-    }
-    .banner img {
-      width: 100%;
-      height: auto;
-      max-height: none;
-      border-radius: 10px;
-      object-fit: contain;
-      aspect-ratio: 1920 / 640;
-      display: block;
-      margin: 0 auto;
-    }
-
-    /* ★ 통일된 타이틀 폰트/색상 */
+    /* 통일 타이틀 폰트/색상 */
     .review-title,
     .realtime-section > h2,
     .form-title {
@@ -37,16 +20,15 @@
       letter-spacing: -1px;
     }
 
-    /* 실제 후기 영역 스타일 */
+    /* 실제 후기 섹션 테두리 블랙은 그대로 */
     .review-section {
       background-color: #fffde7;
-      border: 3px solid #ff9800;
+      border: 3px solid #000 !important;
       border-radius: 14px;
       padding: 15px 10px 10px 10px;
-      box-shadow: 0 0 15px rgba(255, 152, 0, 0.6);
+      box-shadow: 0 0 15px rgba(255, 152, 0, 0.25);
       margin: 20px 0 30px;
     }
-
     .review-slider {
       display: flex;
       overflow-x: auto;
@@ -56,24 +38,20 @@
       scrollbar-width: thin;
       scrollbar-color: #ff9800 #eee;
     }
-    .review-slider::-webkit-scrollbar {
-      height: 8px;
-    }
-    .review-slider::-webkit-scrollbar-thumb {
-      background: #ff9800;
-      border-radius: 4px;
-    }
+    .review-slider::-webkit-scrollbar { height: 8px; }
+    .review-slider::-webkit-scrollbar-thumb { background: #ff9800; border-radius: 4px; }
+    /* 슬라이스(슬라이드) 테두리 제거, 오렌지 box-shadow 효과 유지 */
     .review-slide {
       flex: 0 0 auto;
       scroll-snap-align: start;
       width: 300px;
       height: 200px;
       border-radius: 12px;
-      box-shadow: 0 0 10px rgba(255, 152, 0, 0.7);
+      box-shadow: 0 0 10px rgba(255, 152, 0, 0.7); /* 오렌지 그라데이션 효과 */
       position: relative;
       cursor: pointer;
       overflow: hidden;
-      border: 3px solid #ff9800;
+      border: none !important; /* 테두리 제거 */
       transition: box-shadow 0.3s ease;
       background-color: #fffde7;
     }
@@ -85,11 +63,11 @@
       height: 100%;
       object-fit: cover;
       border-radius: 12px;
+      border: none !important; /* 후기 사진 자체 테두리 제거 */
       transition: transform 0.3s ease;
+      box-sizing: border-box;
     }
-    .review-slide:hover img {
-      transform: scale(1.05);
-    }
+    .review-slide:hover img { transform: scale(1.05); }
 
     #review-popup {
       display: none;
@@ -122,7 +100,6 @@
       color: #000;
       position: relative;
     }
-
     .realtime {
       max-height: 700px;
       height: 700px;
@@ -132,21 +109,13 @@
     }
     .realtime-inner {
       height: 700px;
-      /* 스크롤 하나만 */
       overflow-y: auto;
       position: relative;
       scrollbar-width: thin;
       scrollbar-color: #0077c2 #f1f1f1;
-      mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 90%, transparent 100%);
-      -webkit-mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 90%, transparent 100%);
     }
-    .realtime-inner::-webkit-scrollbar {
-      width: 8px;
-    }
-    .realtime-inner::-webkit-scrollbar-thumb {
-      background-color: #0077c2;
-      border-radius: 4px;
-    }
+    .realtime-inner::-webkit-scrollbar { width: 8px; }
+    .realtime-inner::-webkit-scrollbar-thumb { background-color: #0077c2; border-radius: 4px; }
 
     .realtime table {
       width: 100%;
@@ -160,9 +129,7 @@
       border-spacing: 0;
       border-collapse: collapse;
     }
-    .realtime thead tr {
-      display: table-row;
-    }
+    .realtime thead tr { display: table-row; }
     .realtime tbody.realtime-table-body {
       display: block;
       animation: scrollLoop 60s linear infinite;
@@ -174,20 +141,24 @@
       max-height: 700px;
       display: block;
     }
+    /* 헤더 번짐/그라데이션 효과 제거 - 완전 블랙 */
     .realtime thead {
       position: sticky;
       top: 0;
-      background: #000;
+      background: #000 !important;
       color: #ffd700;
       font-weight: 900;
       font-size: 20px;
       z-index: 10;
       border: 1px solid #ccc;
+      filter: none !important;
+      box-shadow: none !important;
     }
     .realtime th {
       padding: 12px 8px;
       border: 1px solid #ccc;
       text-align: center;
+      background: none !important;
     }
     .realtime td {
       padding: 12px 8px;
@@ -201,14 +172,11 @@
     .realtime th:nth-child(2), .realtime td:nth-child(2) { width: 20%; }
     .realtime th:nth-child(3), .realtime td:nth-child(3) { width: 40%; font-weight: 600; font-size: 18px; }
     .realtime th:nth-child(4), .realtime td:nth-child(4) { width: 20%; }
-
     .admin-cell { min-width: 140px; padding: 6px !important; font-size: 18px; }
-
     .status-red { color: red; font-weight: bold; }
     .status-orange { color: orange; font-weight: bold; }
     .status-yellow { color: #fbc02d; font-weight: bold; }
     .status-green { color: green; font-weight: bold; }
-
     .admin-select {
       padding: 4px 6px;
       font-size: 18px;
@@ -224,12 +192,7 @@
       width: 100%;
     }
 
-    .btn-group {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      margin-bottom: 20px;
-    }
+    .btn-group { display: flex; flex-wrap: wrap; gap: 10px; margin-bottom: 20px; }
     .btn-group button {
       flex: 1 1 calc(50% - 10px);
       padding: 10px;
@@ -241,11 +204,7 @@
       transition: background 0.2s, color 0.2s;
       font-size: 20px;
     }
-    .btn-group button.active {
-      background-color: #0077c2;
-      color: white;
-      border-color: #0077c2;
-    }
+    .btn-group button.active { background-color: #0077c2; color: white; border-color: #0077c2; }
     .btn-group button.tv-extra {
       border: 2px solid #ff9800;
       background: #fffde7;
@@ -259,20 +218,9 @@
     }
 
     .form-field { margin-bottom: 20px; }
-    .form-field label {
-      font-weight: bold;
-      display: block;
-      margin-bottom: 6px;
-    }
+    .form-field label { font-weight: bold; display: block; margin-bottom: 6px; }
     input[type=text], input[type=tel], select {
-      width: 90%;
-      max-width: 400px;
-      padding: 10px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      display: block;
-      margin: 0 auto;
-      font-size: 16px;
+      width: 90%; max-width: 400px; padding: 10px; border-radius: 6px; border: 1px solid #ccc; display: block; margin: 0 auto; font-size: 16px;
     }
 
     .info-banner {
@@ -321,25 +269,23 @@
       cursor: pointer;
       transition: background-color 0.3s ease;
     }
-    .submit-btn:hover {
-      background-color: #005999;
-    }
+    .submit-btn:hover { background-color: #005999; }
 
+    /* 모바일 전용 스타일 */
     @media (max-width: 600px) {
-      body { font-size: 18px; padding: 10px; }
-      /* ↓↓↓↓↓ 상담현황 모바일 폰트/row 2배 축소 */
-      .realtime table,
-      .realtime th,
-      .realtime td {
-        font-size: 9px !important;
-      }
+      .review-section { border-width: 2px !important; }
+      .realtime-section { border-width: 2px !important; }
+      .realtime { max-height: 350px; height: 350px; }
+      .realtime-inner { height: 350px; }
       .realtime th, .realtime td {
         padding: 4px 2px !important;
         height: 18px !important;
+        font-size: 16px !important;
       }
-      .realtime th:nth-child(3), .realtime td:nth-child(3) { font-size: 7px !important; }
-      .admin-cell { font-size: 7px !important; padding: 4px 2px !important; }
-      .admin-select { font-size: 8px !important; }
+      .realtime th:nth-child(4), .realtime td:nth-child(4) { font-size: 16px !important; }
+      .admin-cell span { font-size: 6.5px !important; }
+      .admin-cell { font-size: 12px !important; padding: 4px 2px !important; }
+      .admin-select { font-size: 12px !important; }
       .btn-group button { font-size: 14px; padding: 6px; }
       .notice-box { font-size: 12px; }
       input[type=text], input[type=tel], select {
@@ -348,22 +294,15 @@
         padding: 7px;
       }
       .submit-btn { font-size: 13px; padding: 9px; }
-      .review-slide { width: 140px; height: 100px; border-width: 2px; }
+      /* 슬라이드, 이미지 테두리 2px → 전부 제거 */
+      .review-slide { width: 140px; height: 100px; border: none !important; }
+      .review-slide img { border: none !important; }
       .banner img { height: auto; }
-      /* 타이틀 폰트 18px(고정) 아닌, 25px 유지 */
-      .review-title,
-      .realtime-section > h2,
-      .form-title {
-        font-size: 25px !important;
-      }
+      .review-title, .realtime-section > h2, .form-title { font-size: 25px !important; }
     }
 
     .masked-name { letter-spacing: 2px; font-weight: 700; }
-
-    @keyframes scrollLoop {
-      0% { transform: translateY(0); }
-      100% { transform: translateY(calc(-50%)); }
-    }
+    @keyframes scrollLoop { 0% { transform: translateY(0); } 100% { transform: translateY(calc(-50%)); } }
   </style>
 </head>
 <body>
@@ -371,7 +310,6 @@
     <div class="banner">
       <img src="form_banner_1600_400.png" alt="인터넷성지 배너" />
     </div>
-
     <div class="review-section">
       <div class="review-title">💬 실제 후기</div>
       <div class="review-slider" aria-label="Customer Reviews Slider">
@@ -413,7 +351,6 @@
       <input type="hidden" name="tv_extra" id="tv_extra" />
       <input type="hidden" name="addons" id="addons" />
 
-      <!-- ★ 요구 5. 상품선택 위 '상담예약서' 추가 -->
       <div class="form-title">상담예약서</div>
 
       <div class="section-title" style="font-size:20px;">Q. 상품을 선택해주세요.</div>
@@ -446,13 +383,14 @@
         <label for="name">성함</label>
         <input type="text" id="name" name="name" placeholder="성함을 입력해주세요" required />
       </div>
-
       <div class="form-field">
         <label for="phone">연락처</label>
         <input type="tel" id="phone" name="phone" placeholder="연락처를 입력해주세요" required />
       </div>
-
       <div class="info-banner">⏰ 24시간 연중무휴! 지금 접수하시면 바로 상담 연결됩니다.</div>
+
+      <!-- 절취선 추가 위치!! -->
+      <div style="border-top: 2px dashed #ccc; margin: 30px 0 15px 0;"></div>
 
       <div class="form-field">
         <select name="time" id="time">
@@ -463,7 +401,6 @@
           <option>19시</option><option>20시</option><option>21시</option><option>22시</option>
         </select>
       </div>
-
       <div class="privacy-box">
         <strong>개인정보 수집 및 이용 동의</strong><br /><br />
         - 수집 항목: 성함, 연락처, 상담 희망시간, 통신사, 상품정보<br />
@@ -472,11 +409,9 @@
         - 귀하는 개인정보 제공에 동의하지 않을 권리가 있으며, 미동의 시 서비스 이용에 제한이 있을 수 있습니다.
       </div>
       <label><input type="checkbox" required /> 위 내용을 모두 확인하였으며, 개인정보 수집 및 이용에 동의합니다.</label>
-
       <br /><br />
       <button class="submit-btn" type="submit">상담 신청하기</button>
     </form>
-
   </div>
 
   <div id="review-popup" aria-hidden="true">
@@ -485,17 +420,16 @@
   </div>
 
   <script>
+    // JS 내용은 동일(수정 없음)
     const AIRTABLE_TOKEN = "patsLgTBSt5CorHUB.5bb3ba67450d67ac9da759726724d4c3af2d3b8534c9b9aa595a331d382fba3b";
     const AIRTABLE_BASE_ID = "appCRfI2EJrLQJYBL";
     const AIRTABLE_TABLE_NAME = "당일민족1";
     const isAdmin = new URLSearchParams(window.location.search).get("admin") === "true";
-
     function maskName(name) {
       if (!name) return "";
       if (name.length <= 2) return name[0] + "*";
       return name[0] + "*".repeat(name.length - 2) + name[name.length - 1];
     }
-
     async function fetchDataAirtable() {
       try {
         const res = await fetch(
