--- a/index.html
+++ b/index.html
@@ -8,27 +8,44 @@
     body { font-family: 'Pretendard', sans-serif; background-color: #f9fbfd; margin: 0; padding: 20px; font-size: 18px; color: #333; }
     .container { max-width: 720px; margin: auto; }
 
-    /* 통일 타이틀 폰트/색상 */
+    /* 타이틀 폰트/색상 */
     .review-title,
     .realtime-section > h2,
     .form-title {
       font-size: 25px !important;
       font-weight: 700;
-      color: #000 !important;
+      color: #fff !important;
       margin-bottom: 10px;
       text-align: center;
       letter-spacing: -1px;
+      text-shadow: 0 1px 8px #222, 0 0 4px #000;
     }
 
-    /* 실제 후기 섹션 테두리 블랙은 그대로 */
+    /* === 실제 후기 영역 === */
     .review-section {
-      background-color: #fffde7;
-      border: 3px solid #000 !important;
-      border-radius: 14px;
+      background: #000;
+      border-radius: 16px;
+      border: none;
       padding: 15px 10px 10px 10px;
-      box-shadow: 0 0 15px rgba(255, 152, 0, 0.25);
+      box-shadow: 0 0 20px 3px #FFD70099, 0 0 8px 1px #fff2b0cc;
       margin: 20px 0 30px;
+      position: relative;
     }
+    .review-section::before {
+      content: "";
+      position: absolute;
+      z-index: 0;
+      inset: 0;
+      border-radius: 18px;
+      padding: 2px;
+      background: linear-gradient(120deg, #fff6bf 0%, #ffd700 22%, #ffb300 45%, #fff6bf 60%, #fff6bf 100%);
+      -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+      -webkit-mask-composite: xor;
+      mask-composite: exclude;
+      pointer-events: none;
+    }
+    .review-title { color: #fff !important; position: relative; z-index: 1; }
+
     .review-slider {
       display: flex;
       overflow-x: auto;
@@ -36,36 +53,49 @@
       gap: 10px;
       padding: 10px 0 20px 0;
       scrollbar-width: thin;
-      scrollbar-color: #ff9800 #eee;
+      scrollbar-color: #ffd700 #111;
+      position: relative;
+      z-index: 1;
     }
     .review-slider::-webkit-scrollbar { height: 8px; }
-    .review-slider::-webkit-scrollbar-thumb { background: #ff9800; border-radius: 4px; }
-    /* 슬라이스(슬라이드) 테두리 제거, 오렌지 box-shadow 효과 유지 */
+    .review-slider::-webkit-scrollbar-thumb { background: #ffd700; border-radius: 4px; }
+
     .review-slide {
       flex: 0 0 auto;
       scroll-snap-align: start;
       width: 300px;
       height: 200px;
-      border-radius: 12px;
-      box-shadow: 0 0 10px rgba(255, 152, 0, 0.7); /* 오렌지 그라데이션 효과 */
+      border-radius: 15px;
+      background: #000;
       position: relative;
       cursor: pointer;
       overflow: hidden;
-      border: none !important; /* 테두리 제거 */
-      transition: box-shadow 0.3s ease;
-      background-color: #fffde7;
+      border: 3px solid transparent;
+      margin-bottom: 5px;
+      box-shadow:
+        0 0 0 4px #fff6bf,
+        0 0 0 8px #ffd700,
+        0 0 24px 2px #ffd70088,
+        0 0 2px #fff6bf;
+      transition: box-shadow 0.3s;
     }
     .review-slide:hover {
-      box-shadow: 0 0 20px rgba(255, 152, 0, 1);
+      box-shadow:
+        0 0 0 6px #fff6bf,
+        0 0 0 12px #ffd700cc,
+        0 0 32px 5px #ffd700dd,
+        0 0 12px #fff6bfcc;
     }
     .review-slide img {
       width: 100%;
       height: 100%;
       object-fit: cover;
       border-radius: 12px;
-      border: none !important; /* 후기 사진 자체 테두리 제거 */
-      transition: transform 0.3s ease;
+      border: none !important;
       box-sizing: border-box;
+      display: block;
+      background: #222;
+      transition: transform 0.3s;
     }
     .review-slide:hover img { transform: scale(1.05); }
 
@@ -82,7 +112,8 @@
       max-width: 90vw;
       max-height: 80vh;
       border-radius: 12px;
-      box-shadow: 0 0 15px rgba(255,215,0,0.8);
+      box-shadow: 0 0 15px 5px #ffd700cc;
+      background: #111;
     }
     #review-popup .close-area {
       position: absolute; width: 100%; height: 100%; top:0; left:0; cursor: pointer;
@@ -141,24 +172,25 @@
       max-height: 700px;
       display: block;
     }
-    /* 헤더 번짐/그라데이션 효과 제거 - 완전 블랙 */
     .realtime thead {
       position: sticky;
       top: 0;
       background: #000 !important;
-      color: #ffd700;
+      color: #ffd700 !important;
       font-weight: 900;
       font-size: 20px;
       z-index: 10;
       border: 1px solid #ccc;
       filter: none !important;
       box-shadow: none !important;
+      background-image: none !important;
     }
     .realtime th {
       padding: 12px 8px;
       border: 1px solid #ccc;
       text-align: center;
       background: none !important;
+      color: #ffd700 !important;
     }
     .realtime td {
       padding: 12px 8px;
@@ -205,9 +237,11 @@
       font-size: 20px;
     }
     .btn-group button.active { background-color: #0077c2; color: white; border-color: #0077c2; }
+    /* TV추가 버튼 원복 */
     .btn-group button.tv-extra {
       border: 2px solid #ff9800;
       background: #fffde7;
+      color: #ff9800;
       box-shadow: 0 0 10px rgba(255, 152, 0, 0.5);
     }
     .btn-group button.tv-extra.active {
@@ -273,7 +307,7 @@
 
     /* 모바일 전용 스타일 */
     @media (max-width: 600px) {
-      .review-section { border-width: 2px !important; }
+      .review-section { border-width: 0 !important; }
       .realtime-section { border-width: 2px !important; }
       .realtime { max-height: 350px; height: 350px; }
       .realtime-inner { height: 350px; }
@@ -294,10 +328,19 @@
         padding: 7px;
       }
       .submit-btn { font-size: 13px; padding: 9px; }
-      /* 슬라이드, 이미지 테두리 2px → 전부 제거 */
       .review-slide { width: 140px; height: 100px; border: none !important; }
       .review-slide img { border: none !important; }
-      .banner img { height: auto; }
+      /* 배너를 화면 전체 너비에, 인물 중심으로 크게! */
+      .banner img {
+        width: 100vw;
+        max-width: none;
+        height: 230px;
+        object-fit: cover;
+        object-position: center top;
+        display: block;
+        margin: 0 -20px 0 -20px;
+        border-radius: 0 0 32px 32px;
+      }
       .review-title, .realtime-section > h2, .form-title { font-size: 25px !important; }
     }
 
@@ -353,7 +396,7 @@
 
       <div class="form-title">상담예약서</div>
 
-      <div class="section-title" style="font-size:20px;">Q. 상품을 선택해주세요.</div>
+      <div class="section-title" style="font-size:20px;color:#222;">Q. 상품을 선택해주세요.</div>
       <div class="btn-group" id="product-group">
         <button type="button">인터넷</button>
         <button type="button">인터넷+TV</button>
@@ -362,17 +405,17 @@
       </div>
       <div class="notice-box">
         인터넷+TV 2대 신청이시거나 TV만 신청하신 고객님은<br />
-        반드시 <span style="color:#0077c2;font-weight:bold;">‘인터넷+TV’</span>와 <span style="color:#ff9800;font-weight:bold;">‘TV추가’</span> 버튼을 함께 선택해주세요.<br />
-        TV만 신청하실 경우 <span style="color:#ff9800;font-weight:bold;">‘TV추가’</span>만 선택하셔도 접수 가능합니다.
+        반드시 <span style="color:#0077c2;font-weight:bold;">‘인터넷+TV’</span>와 <span style="color:#ffd700;font-weight:bold;">‘TV추가’</span> 버튼을 함께 선택해주세요.<br />
+        TV만 신청하실 경우 <span style="color:#ffd700;font-weight:bold;">‘TV추가’</span>만 선택하셔도 접수 가능합니다.
       </div>
 
-      <div class="section-title" style="font-size:20px;">Q. 통신사를 선택해주세요.</div>
+      <div class="section-title" style="font-size:20px;color:#222;">Q. 통신사를 선택해주세요.</div>
       <div class="btn-group" id="carrier-group">
         <button type="button">SK</button><button type="button">KT</button><button type="button">LG</button>
         <button type="button">LG 헬로비전</button><button type="button">KT 스카일라이프</button>
       </div>
 
-      <div class="section-title" style="font-size:20px;">Q. 부가상품을 선택해주세요. (복수 선택 가능)</div>
+      <div class="section-title" style="font-size:20px;color:#222;">Q. 부가상품을 선택해주세요. (복수 선택 가능)</div>
       <div class="btn-group multi" id="addons-group">
         <button type="button">유심</button><button type="button">정수기</button><button type="button">CCTV</button>
       </div>
@@ -389,7 +432,6 @@
       </div>
       <div class="info-banner">⏰ 24시간 연중무휴! 지금 접수하시면 바로 상담 연결됩니다.</div>
 
-      <!-- 절취선 추가 위치!! -->
       <div style="border-top: 2px dashed #ccc; margin: 30px 0 15px 0;"></div>
 
       <div class="form-field">
@@ -420,7 +462,7 @@
   </div>
 
   <script>
-    // JS 내용은 동일(수정 없음)
+    // JS 동일
     const AIRTABLE_TOKEN = "patsLgTBSt5CorHUB.5bb3ba67450d67ac9da759726724d4c3af2d3b8534c9b9aa595a331d382fba3b";
     const AIRTABLE_BASE_ID = "appCRfI2EJrLQJYBL";
     const AIRTABLE_TABLE_NAME = "당일민족1";
